Dev: Fix for Home Page video on smaller devices

--- a/src/components/VideoBackground.scss
+++ b/src/components/VideoBackground.scss
@@ -94,9 +94,9 @@ body.light .html-video-container {
 @media only screen and (min-width: 200px) and (max-width: 350px) {
   .html-video-container {
     transform: scale(3.5);
-    top: 120px;
-    video {
-      transform: scale(4.5);
-    }
+    top: 110px;
+    // video {
+    //   transform: scale(2);
+    // }
   }
 }
